# scnnoise

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  setup.py  test_notebook.py
data/test_GRN/: GRN_size_6_net_1.csv
data/toy_data/: single_gene_cell_cycle.csv  single_gene_cell_cycle_count_output.csv  single_gene_cell_cycle_molecule_count.csv
doc/: Trajectory Inference.ipynb  gillespie.ipynb  langevin.ipynb  tau-leap.ipynb
src/: scnnoise.cpp  scnnoise.hpp
src/GRN_simulation/: GRN  GRN.cpp  GRN.hpp  GRN_test  GRN_test.cpp  GRN_test_ex  Graph  graph.cpp  graph.hpp  graph_dependency.cpp
src/gillespie/: gillespie.cpp  gillespie.hpp  gillespieSDM.cpp  gillespieSDM.hpp  gillespieSSA.cpp  gillespieSSA.hpp
src/graph/: GRN.cpp
src/langevin/: langevin.cpp  langevin.py
src/scnnoise/: CellType.py  GRN.cpp  GRN.hpp  LTSim.py  bindings.cpp  class12.cpp  class12.hpp  find_mean.hpp  gillespieSDM.cpp  gillespieSDM.hpp  gillespieSDMCellCycle.cpp  gillespieSDMCellCycle.hpp  gillespieSDMnoCellCycle.cpp  gillespieSDMnoCellCycle.hpp  gillespieSSA.cpp  gillespieSSA.hpp  graph.cpp  graph.hpp  graph_dependency.cpp  graph_dependency.hpp  graph_derived.cpp  graph_derived.hpp  interpolate_1D.cpp  interpolate_1D.hpp  linear_regression_1D.cpp  linear_regression_1D.hpp  online_moments.cpp  online_moments.hpp  random_generator.cpp  random_generator.hpp  sample_kinetics.cpp  sample_kinetics.hpp  scnnoise.cpp  scnnoise.hpp  scnnoise.py  utils.cpp  utils.hpp
tests/: CMakeLists.txt  build_graph_test.sh  test_GRN.cpp  test_GRN_global_variables.hpp  test_cpp.py  test_graph.cpp  test_main.cpp  test_scnnoise.cpp  test_scnnoise_main.cpp  test_utils.cpp  test_utils.hpp
